--- a/project/src/main/webapp/index.html
+++ b/project/src/main/webapp/index.html
@@ -16,6 +16,7 @@
     </table>
 
     <p>This session is to demonstrate how to setup simple pipeline </p>
+    <p>Atomated Build and Deploy testing</p>
     <p> This is testing of Git-Github push </p>
 </body>
 </html>
